5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1888_3136.log
== TEST (2019-07-09 16:21:13) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:18) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- EXECUTION TIME:
0.947235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3136/main.py", line 5, in <module>
    M = exp(log(v[i]+1)/size(v))
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:22) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- EXECUTION TIME:
0.836345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3136/main.py", line 5, in <module>
    M = exp(log(v[i]+1)/size(v))
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:23) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:27:05) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- EXECUTION TIME:
0.792285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/3136/main.py", line 5, in <module>
    M = exp(log(v[i]+1)/size(v))
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:09) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	M = exp(log(v[i]+1)/size(v))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:29:30) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in v :
	
M = exp(log(v[i]+1)/size(v))
print(round(M,2)
-- EXECUTION TIME:
0.574483
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 6
    M = exp(log(v[i]+1)/size(v))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:28) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2)
-- EXECUTION TIME:
0.706198
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:29) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:31) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2)
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:37) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:48) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
1.34549
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.37
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.37
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
1.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:48) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:54) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
2.55764
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.4
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
jdh:1.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
1.78393
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.37
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.4
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
jdh:1.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
5.91059
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.4
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.4
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
jdh:1.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
8.15956
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.4
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:

-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
jdh:1.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:31:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- EXECUTION TIME:
8.40267
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.4
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
jdh:1.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:40) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]+1
M = exp(log(v[i])/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:55) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:05) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:26) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:26) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:37:56) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)+log(v[i]+1+/size(v))
print(round(M,2))
-- EXECUTION TIME:
0.818846
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 6
    M = exp(log(v[i]+1)+log(v[i]+1+/size(v))
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:57) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[i]+1)+log(v[i]+1+/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 6
    M = exp(log(v[i]+1)+log(v[i]+1+/size(v))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:39:02) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
   M = exp(log(v[i]+1)/size(v))
	v[i]=v[i]+1
print(round(M,2))
-- EXECUTION TIME:
0.556073
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 6
    v[i]=v[i]+1
              ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:03) 
-- CODE:
from numpy import * 
from math import *
v = array(eval(input("jdh:")))
for i in range(size(v)):
   M = exp(log(v[i]+1)/size(v))
	v[i]=v[i]+1
print(round(M,2))
-- ERROR:
File "XXXX", line 6
    v[i]=v[i]+1
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:17) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
   M = exp(log(v[a]+1)/size(v)):
	   a=a+1

print(round(M,2))
-- EXECUTION TIME:
0.650769
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 6
    M = exp(log(v[a]+1)/size(v)):
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:18) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
   M = exp(log(v[a]+1)/size(v)):
	   a=a+1

print(round(M,2))
-- ERROR:
File "XXXX", line 6
    M = exp(log(v[a]+1)/size(v)):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:24) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)*size(v)/size(v)
print(round(M,2))
-- EXECUTION TIME:
0.727587
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 7
    M = exp(log(v[1]+1)*size(v)/size(v)
                                      ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:26) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)*size(v)/size(v)
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[1]+1)*size(v)/size(v)
                                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:49:49) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)*size(v)/size(v)
print(round(M,2))
-- EXECUTION TIME:
0.616205
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 7
    M = exp(log(v[1]+1)*size(v)/size(v)
                                      ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:50) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)*size(v)/size(v)
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[1]+1)*size(v)/size(v)
                                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:52) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)*size(v)/size(v)
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[1]+1)*size(v)/size(v)
                                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:50:09) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- EXECUTION TIME:
0.838229
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 7
    M = exp(log(v[1]+1)/size(v))
                               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:16) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[1]+1)/size(v))
                               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:22) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
   M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[1]+1)/size(v))
                               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:28) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:50:38) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- EXECUTION TIME:
1.06158
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.21
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.21
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
1.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:50:42) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(v)):
	v[i]=v[i]
	M = exp(log(v[1]+1)/size(v))
print(round(M,2))
-- EXECUTION TIME:
0.719716
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
1.21
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
1.21
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
1.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:53:20) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
	M = exp(log(v[i]+1)+/size(v))
print(round(M,2))
-- EXECUTION TIME:
0.570838
-- ERROR:
  File "/home/codebench/codes/1888/3136/main.py", line 7
    M = exp(log(v[i]+1)+/size(v))
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:21) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
	M = exp(log(v[i]+1)+/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[i]+1)+/size(v))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:31) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
M = exp(log(v[i]+1)+/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[i]+1)+/size(v))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:33) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
M = exp(log(v[i]+1)+/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[i]+1)+/size(v))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:35) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
	M = exp(log(v[i]+1)+/size(v))
print(round(M,2))
-- ERROR:
File "XXXX", line 7
    M = exp(log(v[i]+1)+/size(v))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:40) 
-- CODE:
from numpy import * 
from math import *
a=0
v = array(eval(input("jdh:")))
for i in range(size(x)):
	v[i]=v[i]
	M = exp(log(v[i]+1)/size(v))
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
